whoami_path/whoami-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: whoami-service
#   namespace: default
# spec:
#   ports:
#   - name: http
#     targetPort: 80
#     port: 80
#   selector:
#     app: whoami

apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
